# Rag

./: .env.example  .gitignore  README.md  controller.py  graph.py  main.py  push-image.sh  push-ollama-image.sh  push-rag-image.sh  push-vllm-image.sh  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docker/VLLM/: Dockerfile
docker/ollama/: Dockerfile  entrypoint_ollama.sh
docker/rag_app/: .env  Dockerfile  docker-compose.yml  entrypoint_app.sh  push-image.sh
postman/: RAG.postman_collection.json
src/: config.py  db.py  db_memory.py  graph.py  llm_singleton.py  main.py
src/rag_app/: config.py  db.py  db_memory.py  graph.py  graph_configuration.py  jwt.py  llm_singleton.py  logging_setup.py  main.py  pdf_parser.py
src/rag_app/agent/: agent_state.py  graph.py  graph_configuration.py
src/rag_app/document/: document_retriever.py  user_document_handler.py
src/rag_app/ingestion/: coalesce.py  constants.py  pdf_store.py
src/rag_app/retrieval/: pdf_retriever.py
src/rag_app/web_api/: admin.py  chat_history_web.py  documents.py  endpoints.py  jwt_resolver.py
tests/: conftest.py  test_admin.py  test_coalesce.py  test_config.py  test_constants.py  test_graph_configuration.py  test_jwt_resolver.py  test_pdf_retriever.py  test_pdf_store.py  test_user_document_handler.py
